@startuml
skinparam linetype polyline
skinparam linetype ortho

skinparam nodesep 100
skinparam ranksep 100

skinparam titleBorderRoundCorner 15
skinparam titleBorderThickness 2
skinparam titleBorderColor red
skinparam titleBackgroundColor Aqua-CadetBlue
skinparam TitleFontSize 40

title Appendix P - UFO / Player Class Composition Relations

class com.mygdx.game.game.components.game.enemy.UFO {
- String imgPath
- String dir
- float speed
- Texture texture
- ArrayList<CollidableEntity<Laser>> lasers
- Rectangle rectangle
- int health
- long lastShotTime
- long shotDelay
+ float getSpeed()
+ void setSpeed(float)
+ Texture getTexture()
+ void setTexture(Texture)
+ int getHealth()
+ void setHealth(int)
+ void moveUFO(CollidableEntity,int,int)
+ void moveLeft(CollidableEntity)
+ void moveRight(CollidableEntity)
+ void moveDown(CollidableEntity)
+ long fireWeapon(CollidableEntity,Main)
+ void dropAsteroid(CollidableEntity<Asteroid>)
+ void dropPlanet(CollidableEntity<Planet>)
+ void moveLasers(CollidableEntity<UFO>)
+ ArrayList<CollidableEntity<Laser>> getLasers()
}

class com.mygdx.game.game.components.game.Laser {
- String imgName
- Sprite sprite
- float width
- float height
- float speed
- SpriteBatch batch
+ SpriteBatch getBatch()
+ void setBatch(SpriteBatch)
+ String getImgName()
+ void setImgName(String)
+ Sprite getSprite()
+ void setSprite(Sprite)
+ float getWidth()
+ void setWidth(float)
+ float getHeight()
+ void setHeight(float)
+ float getSpeed()
+ void setSpeed(float)
}

class com.mygdx.game.game.components.game.player.Player {
- String imgName
- Sprite sprite
- float width
- float height
- float speed
- int[] mainKeyboardInputs
- int[] altKeyboardInputs
- int score
- ArrayList<CollidableEntity<Laser>> lasers
- int maxHealth
- int currentHealth
- int aliensKilled
- Timestamp startTime
- Afterburner afterburner
+ Afterburner getAfterburner()
+ void setAfterburner(Afterburner)
+ String getImgName()
+ void setImgName(String)
+ Sprite getSprite()
+ void setSprite(Sprite)
+ float getWidth()
+ void setWidth(float)
+ float getHeight()
+ void setHeight(float)
+ float getSpeed()
+ void setSpeed(float)
+ int[] getMainKeyboardInputs()
+ void setMainKeyboardInputs(int[])
+ int[] getAltKeyboardInputs()
+ void setAltKeyboardInputs(int[])
+ int getScore()
+ void setScore(int)
+ ArrayList<CollidableEntity<Laser>> getLasers()
+ void setLasers(ArrayList<CollidableEntity<Laser>>)
+ int getMaxHealth()
+ void setMaxHealth(int)
+ int getCurrentHealth()
+ void setCurrentHealth(int)
+ Timestamp getStartTime()
+ void setStartTime(Timestamp)
+ void limitPlayerMovement(CollidableEntity<Player>,Integer,Integer)
+ int movePlayer(CollidableEntity<Player>,CustomInputProcessor)
+ int getAliensKilled()
+ void setAliensKilled(int)
+ void moveLasers(CollidableEntity<Player>)
+ void spawnLasers(CustomInputProcessor,CollidableEntity<Player>,Main)
+ void savePlayerData(Main)
}

class com.mygdx.game.game.components.game.player.Afterburner {
- String imgPath
- Texture texture
- SpriteBatch batch
- float x
- float y
- boolean visibility
+ String getImgPath()
+ void setImgPath(String)
+ Texture getTexture()
+ void setTexture(Texture)
+ SpriteBatch getBatch()
+ void setBatch(SpriteBatch)
+ float getX()
+ void setX(float)
+ float getY()
+ void setY(float)
+ boolean getVisibility()
+ void setVisibility(boolean)
}

com.mygdx.game.game.components.game.enemy.UFO *------ com.mygdx.game.game.components.game.Laser :has many

com.mygdx.game.game.components.game.player.Player *------ com.mygdx.game.game.components.game.Laser :has many
com.mygdx.game.game.components.game.player.Player *------ com.mygdx.game.game.components.game.player.Afterburner :has
@enduml